--- a/age.html
+++ b/age.html
@@ -482,7 +482,7 @@
         </div>
         
         <button class="calculate-btn" onclick="calculateAge()">
-            ✨ Calculate My Age ✨
+            ✨ My Age ✨
         </button>
         
         <div class="result" id="result"></div>
@@ -617,11 +617,12 @@
 
             // Create speech text in Hindi
             const speechText = `
-                आपकी उम्र की गणना तैयार है! 
+                आपकी उम्र की गणना तैयार हो चुकी कृपया ध्यान से सुनिए है! 
+                आपको यह बताते हुए हमें बहुत ख़ुशी हो रही कि ..
                 आपकी वर्तमान उम्र ${years} साल, ${months} महीने, और ${days} दिन है। 
-                आपने इस धरती पर कुल ${totalDays.toLocaleString()} दिन जिए हैं। 
-                आपका अगला जन्मदिन ${daysUntilBirthday} दिनों में है। 
-                आप ${birth.toLocaleDateString('hi-IN', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })} को पैदा हुए थे।
+                आपने इस धरती पर कुल ${totalDays.toLocaleString()} दिन मस्ती किये है और सबको परेशान किये हैं। 
+                आपका अगला जन्मदिन ${daysUntilBirthday} दिनों में है। आप तैयार रहिये हम आपके जन्मदिन का केक खाने अवश्य आयेंगें !
+                आपका जन्म ${birth.toLocaleDateString('hi-IN', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })} को हुआ था , आपका दिन शुभ और मंगलमय रहे !
             `;
 
             // Check if speech synthesis is supported
