--- a/age.html
+++ b/age.html
@@ -617,12 +617,12 @@
 
             // Create speech text in Hindi
             const speechText = `
-                आपकी उम्र की गणना तैयार हो चुकी कृपया ध्यान से सुनिए है! 
+                आपकी उम्र की गणना तैयार हो चुकी कृपया ध्यान से सुनिए 
                 आपको यह बताते हुए हमें बहुत ख़ुशी हो रही कि ..
-                आपकी वर्तमान उम्र ${years} साल, ${months} महीने, और ${days} दिन है। 
-                आपने इस धरती पर कुल ${totalDays.toLocaleString()} दिन मस्ती किये है और सबको परेशान किये हैं। 
-                आपका अगला जन्मदिन ${daysUntilBirthday} दिनों में है। आप तैयार रहिये हम आपके जन्मदिन का केक खाने अवश्य आयेंगें !
-                आपका जन्म ${birth.toLocaleDateString('hi-IN', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })} को हुआ था , आपका दिन शुभ और मंगलमय रहे !
+                आपकी वर्तमान उम्र ${years} साल, ${months} महीने, और ${days} दिन है 
+                आपने इस धरती पर कुल ${totalDays.toLocaleString()} दिन मस्ती किये है और सबको परेशान किये हैं 
+                आपका अगला जन्मदिन ${daysUntilBirthday} दिनों में है। आप तैयार रहिये हम आपके जन्मदिन का केक खाने अवश्य आयेंगें 
+                आपका जन्म ${birth.toLocaleDateString('hi-IN', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })} को हुआ था , आपका दिन शुभ और मंगलमय रहे - धन्यवाद 
             `;
 
             // Check if speech synthesis is supported
@@ -634,7 +634,7 @@
                 utterance.lang = 'hi-IN'; // Set language to Hindi
                 utterance.rate = 0.8; // Slightly slower for better Hindi pronunciation
                 utterance.pitch = 1;
-                utterance.volume = 1;
+                utterance.volume = 3;
                 
                 const speakBtn = document.getElementById('speakBtn');
                 
