--- a/about.html
+++ b/about.html
@@ -117,6 +117,74 @@ header h1, header h3 {
     <h2>About Us</h2>
     <p>We offer industry-relevant computer education with practical knowledge and expert faculty.</p>
         <p>डा. शिव कुमार – प्रोफ़ाइल परिचय</p>
+        <p>Shiv Kumar (शिवकुमार)
+📍 27, Karnpur, Uttar Pradesh – 225304
+📞 +91-8090155304
+📧 ceshivkumar@gmail.com
+
+🎓 शैक्षणिक योग्यता (Education)
+Ph.D. in Computer Applications – Kanpur University
+
+शोध विषय: Cyber Security Analysis & Digital Forensics
+
+MCA (Master of Computer Applications)
+
+B.Sc. in Computer Science
+
+Diploma in Computer Hardware & Networking
+
+🛠️ तकनीकी कौशल (Technical Skills)
+Cyber Security & Forensics: Digital Forensics, Network Analysis, Wireshark
+
+Networking: Routing, Server Configuration (IIS, XAMPP), Services Optimization
+
+Programming Languages:
+
+Python (Document/PDF Report Generation, Automation)
+
+.NET SDK (Calculator & Desktop Apps)
+
+PHP + MySQL (Web Backend Systems)
+
+HTML, CSS (Frontend Development)
+
+Software Development Projects:
+
+Fee Collection Software
+
+School ERP (Multi-device sync, portable versions)
+
+Chatbot (Voice Input, Dark Mode, Chat History, AI Integration)
+
+Chrome Extension (YouTube Shorts Auto Scroll)
+
+Standalone Windows App → Shiv Image Metadata Viewer
+
+🌐 ऑनलाइन प्रोजेक्ट्स
+Shiv Computer (GitHub Pages)
+👉 8090155304.github.io/info/index.html
+
+Practical Computer Education Platform
+
+Contact & Course Info Available
+
+📚 अन्य रुचियाँ (Other Interests)
+हिंदी भाषा सुधारना (बाल हिन्दी व्याकरण तथा रचना पुस्तक)
+
+समाज सुधार: महिलाओं और जानवरों सहित सभी को समानता दिलाने का दृष्टिकोण
+
+गेम डेवलपमेंट (Mobile + Desktop Friendly)
+
+Windows Optimization (Unwanted services disable करके सिस्टम तेज़ करना)
+
+🗝️ Key Highlights
+Cyber Security & Digital Forensics में विशेषज्ञता
+
+Web Development और Desktop Application Development दोनों में अनुभव
+
+Practical Learning और Tech Projects के ज़रिए दूसरों को सिखाने का जुनून
+
+Vision: समानता पर आधारित समाज का निर्माण</p>
 <p>डा. शिव कुमार भारत के प्रतिष्ठित साइबर सुरक्षा विशेषज्ञ व उद्यमी हैं, जिन्होंने कानपुर विश्वविद्यालय से कंप्यूटर विज्ञान में डॉक्टरेट की उपाधि प्राप्त की है। वे दो सफल व्यवसाय—शिव कंप्यूटर और शिव गारमेंट्स—के संस्थापक हैं। 
 
 उनका कार्यक्षेत्र साइबर सुरक्षा विश्लेषण, डिजिटल डिफेंस और साइबर जागरूकता में फैला हुआ है। डा. शिव कुमार सक्रिय रूप से विभिन्न क्षेत्रों में सायबर हमला एवं डिजिटल कमजोरियों की पहचान करके खुद को और अन्य लोगों को सुरक्षित रखने के उपाय करते हैं। वे समाज और कंपनियों में डिजिटल सुरक्षा और जागरूकता फैलाने के मिशन पर हैं, ताकि हर व्यक्ति सुरक्षित, जागरूक व तकनीकी रूप से सशक्त बन सके।
