--- a/Collage.html
+++ b/Collage.html
@@ -113,6 +113,8 @@
       <a href="https://scholarship.up.gov.in//">UP Scolership</a>
       <a href="recipt.html">Genrate Recipt</a>
       <a href="dob.html">DOB Certificate</a>
+      <a href="https://shvr.education.gov.in/">SHVR</a>
+      <a href="https://inspireawards-dst.gov.in//">Inspire MANAK</a>
     </div>
   </main>
 </body>
@@ -144,4 +146,5 @@
 
 </body>
 </html>
+
 
