--- a/Collage.html
+++ b/Collage.html
@@ -110,7 +110,7 @@
       <a href="https://udiseplus.gov.in/#/en/page/oldlink/109">UDISE+ All Module</a>
       <a href="https://sdms.udiseplus.gov.in/p1/v1/login?state-id=109">Student Module</a>
       <a href="https://www.lkouniv.ac.in/">Lucknow University</a>
-      <a href="https://scholarship.up.gov.in//">UP Scolership</a>
+      <a href="https://scholarship.up.gov.in//">UP Scholarship</a>
       <a href="recipt.html">Genrate Recipt</a>
       <a href="dob.html">DOB Certificate</a>
       <a href="https://shvr.education.gov.in/">SHVR</a>
@@ -146,5 +146,6 @@
 
 </body>
 </html>
+
 
 
