--- a/Collage.html
+++ b/Collage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>New - Shiv Computer</title>
+  <title>Shiv Computer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="SHIV.png">
   <style>
@@ -87,7 +87,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="courses.html">Courses</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="Collage.html">Collage</a></li>
+        <li><a href="Collage.html">College</a></li>
         <li><a href="Photo.html">Photo</a></li>
         <li><a href="AI.html">AI</a></li>
       </ul>
@@ -146,6 +146,7 @@
 
 </body>
 </html>
+
 
 
 
