--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="courses.html">Courses</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="Collage.html">Collage</a></li>
+          <li><a href="Collage.html">College</a></li>
           <li><a href="Photo.html">Photo</a></li>
           <li><a href="AI.html">AI</a></li>
         </ul>
