--- a/AI.html
+++ b/AI.html
@@ -117,6 +117,7 @@ header h1, header h3 {
     <h2>AI TOOLS</h2>
     <div class="social-links">
       <a href="https://chatgpt.com/">Chat GPT</a>
+      <li><a href="https://www.youtube.com/channel/UC6dXjXutQ216k9TXIEDKeOA">Home</a></li>
       <a href="https://www.perplexity.ai/">Perplexity</a>
       <a href="https://grok.com/">Grok</a>
       <a href="https://claude.ai/new">Claude</a>
@@ -162,6 +163,7 @@ header h1, header h3 {
 
 </body>
 </html>
+
 
 
 
