--- a/Collage.html
+++ b/Collage.html
@@ -115,7 +115,7 @@
       <a href="dob.html">DOB Certificate</a>
       <a href="https://shvr.education.gov.in/">SHVR</a>
       <a href="https://inspireawards-dst.gov.in//">Inspire MANAK</a>
-      <a href="https://www.rte25.upsdc.gov.in/Index.aspx//">RTE</a>
+      <a href="https://www.rte25.upsdc.gov.in/Index.aspx">RTE</a>
     </div>
   </main>
 </body>
@@ -147,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
