--- a/Collage.html
+++ b/Collage.html
@@ -95,7 +95,7 @@
   </header>
 
   <main>
-    <h2>विद्यालय से सम्बंधित बेबसाईटे</h2>
+    <h2>Important Links</h2>
     <div class="social-links">
       <a href="https://www.facebook.com/profile.php?id=100093146240602">📘 Facebook</a>
       <a href="https://www.instagram.com/ceshiv.kumar/">📷 Instagram</a>
@@ -147,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
