--- a/AI.html
+++ b/AI.html
@@ -132,6 +132,7 @@ header h1, header h3 {
       <a href="invoice.html">Genrate Invoice</a>
       <a href="chatcode.html">Help</a>
       <a href="age.html">उम्र सुने</a
+      <a href="Scanner.html">Image Info</a
     </div>
   </main>
 </body>
@@ -163,6 +164,7 @@ header h1, header h3 {
 
 </body>
 </html>
+
 
 
 
