--- a/AI.html
+++ b/AI.html
@@ -130,6 +130,7 @@ header h1, header h3 {
       <a href="calculator.html">Calculator</a>
       <a href="calc.html">Percentage Cal</a>
       <a href="invoice.html">Genrate Invoice</a>
+      <a href="invoice.html">Genrate Invoice</a
       <a href="chatcode.html">Help</a>
       <a href="age.html">उम्र सुने</a
     </div>
@@ -161,6 +162,7 @@ header h1, header h3 {
 
 </body>
 </html>
+
 
 
 
