--- a/AI.html
+++ b/AI.html
@@ -104,6 +104,7 @@ header h1, header h3 {
       <li><a href="Collage.html">College</a></li>
       <li><a href="Photo.html">Photo</a></li>
       <li><a href="AI.html">AI</a></li>
+      <li><a href="AI.html">AI</a></li>
     </ul>
   </nav>
 </header>
@@ -161,6 +162,7 @@ header h1, header h3 {
 
 </body>
 </html>
+
 
 
 
