--- a/AI.html
+++ b/AI.html
@@ -132,7 +132,7 @@ header h1, header h3 {
       <a href="calc.html">Percentage Cal</a>
       <a href="invoice.html">Genrate Invoice</a>
       <a href="chatcode.html">Help</a>
-      <a href="age.html">उम्र सुने</a
+      <a href="age.html">उम्र सुने</a>
     </div>
   </main>
 </body>
@@ -162,6 +162,7 @@ header h1, header h3 {
 
 </body>
 </html>
+
 
 
 
