--- a/AI.html
+++ b/AI.html
@@ -133,6 +133,7 @@ header h1, header h3 {
       <a href="invoice.html">Genrate Invoice</a>
       <a href="chatcode.html">Help</a>
       <a href="age.html">उम्र सुने</a>
+      <a href="scan.html">ImageINFO</a>
     </div>
   </main>
 </body>
@@ -162,6 +163,7 @@ header h1, header h3 {
 
 </body>
 </html>
+
 
 
 
