--- a/AI.html
+++ b/AI.html
@@ -143,6 +143,41 @@ header h1, header h3 {
     <div class="footer-container">
       <p>&copy; 2025 Shiv Computer. All rights reserved.</p>
       <p>📍 27,Karnpur, Uttar Pradesh-225304 | 📞 +91-80901 53304 | ✉️ ceshivkumar@gmail.com</p>
+      <a aria-label="Chat on WhatsApp" 
+   href="https://wa.me/80901553043?text=Hello%20Shiv!" 
+   class="whatsapp-btn">
+  <img alt="WhatsApp" src="wlogo.png" />
+  <span>WhatsApp</span>
+</a>
+
+<style>
+  .whatsapp-btn {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+    color: white; /* Default text color white */
+    font-weight: bold;
+    font-size: 16px;
+    transition: transform 0.3s ease, color 0.3s ease;
+  }
+
+  .whatsapp-btn img {
+    width: 8mm;   /* Logo width 8mm */
+    height: 8mm;  /* Logo height 8mm */
+    transition: transform 0.3s ease;
+  }
+
+  .whatsapp-btn:hover {
+    transform: scale(1.1);  /* Zoom-in effect */
+    color: #25D366; /* WhatsApp green on hover */
+  }
+
+  .whatsapp-btn:hover img {
+    transform: rotate(10deg) scale(1.2); /* Icon rotate + zoom */
+  }
+</style>
+
     </div>
   </footer>
 
@@ -163,6 +198,7 @@ header h1, header h3 {
 
 </body>
 </html>
+
 
 
 
