--- a/Collage.html
+++ b/Collage.html
@@ -116,6 +116,7 @@
       <a href="https://shvr.education.gov.in/">SHVR</a>
       <a href="https://inspireawards-dst.gov.in//">Inspire MANAK</a>
       <a href="https://www.rte25.upsdc.gov.in/Index.aspx">RTE</a>
+      <a href="https://pfms.nic.in/static/NewLayoutCommonContent.aspx?RequestPagename=static/KnowYourPayment_new.aspx">भुगतान स्थिति</a>
     </div>
   </main>
 </body>
@@ -182,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
