--- a/AI.html
+++ b/AI.html
@@ -195,9 +195,36 @@ header h1, header h3 {
       margin: 5px 0;
     }
   </style>
+  <!-- 🔥 Glow Hover Effects -->
+  <style>
+    nav ul li a:hover {
+      background-color: #ff0000;
+      border-radius: 9px;
+      box-shadow: 0 0 10px #ff0000, 0 0 20px #ff3333, 0 0 40px #ff6666;
+      color: #fff;
+    }
 
+    .social-links a:hover {
+      background: #facade;
+      color: #123524;
+      box-shadow: 0 0 10px #0072ff, 0 0 20px #3399ff, 0 0 40px #66ccff;
+      transform: scale(2.05);
+    }
+
+    .whatsapp-btn:hover {
+      transform: scale(2.1);
+      color: #25D366;
+      text-shadow: 0 0 10px #25D366, 0 0 20px #25D366;
+    }
+
+    .whatsapp-btn:hover img {
+      transform: rotate(10deg) scale(1.2);
+      filter: drop-shadow(0 0 10px #25D366);
+    }
+  </style>
 </body>
 </html>
+
 
 
 
