--- a/Collage.html
+++ b/Collage.html
@@ -109,6 +109,7 @@
       <a href="https://examregistration.upmsp.edu.in/">कक्षा 10 और 12  रजिस्ट्रेशन</a>
       <a href="https://attendance.upmsp.edu.in/">छात्र उपस्थिति</a>
       <a href="https://udiseplus.gov.in/#/en/page/oldlink/109">UDISE+ All Module</a>
+      <a href="https://udiseplus.gov.in/auth/login">Udise+All Module</a>
       <a href="https://sdms.udiseplus.gov.in/p1/v1/login?state-id=109">Student Module</a>
       <a href="https://www.lkouniv.ac.in/">Lucknow University</a>
       <a href="https://scholarship.up.gov.in//">UP Scholarship</a>
@@ -199,5 +200,6 @@
 
 </body>
 </html>
+
 
 
