--- a/AI.html
+++ b/AI.html
@@ -134,6 +134,7 @@ header h1, header h3 {
       <a href="chatcode.html">Help</a>
       <a href="age.html">उम्र सुने</a>
       <a href="scan.html">ImageINFO</a>
+      <a href="sun.html">ImageINFO</a>
     </div>
   </main>
 </body>
@@ -224,6 +225,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
