--- a/sun.html
+++ b/sun.html
@@ -160,7 +160,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="Sunflower.png" 
+        <img src="flow.png" 
              class="sunflower" 
              id="sunflower" 
              alt="सूरजमुखी का फूल">
@@ -457,4 +457,5 @@
         });
     </script>
 </body>
+
 </html>
