--- a/AI.html
+++ b/AI.html
@@ -135,6 +135,7 @@ header h1, header h3 {
       <a href="age.html">उम्र सुने</a>
       <a href="scan.html">ImageINFO</a>
       <a href="sun.html">Flower Animation</a>
+      <a href="data.html">Data Entry</a>
     </div>
   </main>
 </body>
@@ -225,6 +226,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
