--- a/AI.html
+++ b/AI.html
@@ -135,7 +135,8 @@ header h1, header h3 {
       <a href="age.html">उम्र सुने</a>
       <a href="scan.html">ImageINFO</a>
       <a href="sun.html">Flower Animation</a>
-      <a href="data.html">Data Entry</a>
+      <a href="data.html">Creat ID Card</a>
+      <a href="qrgen.html">QR Genrate<</a>
     </div>
   </main>
 </body>
@@ -226,6 +227,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
