--- a/AI.html
+++ b/AI.html
@@ -136,7 +136,7 @@ header h1, header h3 {
       <a href="scan.html">ImageINFO</a>
       <a href="sun.html">Flower Animation</a>
       <a href="data.html">Creat ID Card</a>
-      <a href="qrgen.html">QR Genrate<</a>
+      <a href="qrgen.html">QR Genrate</a>
     </div>
   </main>
 </body>
@@ -227,6 +227,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
