--- a/AI.html
+++ b/AI.html
@@ -137,6 +137,7 @@ header h1, header h3 {
       <a href="sun.html">Flower Animation</a>
       <a href="data.html">Creat ID Card</a>
       <a href="qrgen.html">QR Genrate</a>
+      <a href="UPID to QR .html">Acept Payment</a>
     </div>
   </main>
 </body>
@@ -227,6 +228,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
