--- a/AI.html
+++ b/AI.html
@@ -138,6 +138,7 @@ header h1, header h3 {
       <a href="data.html">Creat ID Card</a>
       <a href="qrgen.html">QR Genrate</a>
       <a href="UPID to QR .html">Acept Payment</a>
+      <a href="https://www.scribd.com/document/935123135/DSC-Guide-FULL-for-Explorer-8090155304">DSC SETUP</a>
     </div>
   </main>
 </body>
@@ -228,6 +229,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
