Update welcome message in index.html

--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
 
     <div id="welcomePopup">
         <div class="popup-content">
-            <h2>Welcome to Shiv Computer!</h2>
-            <p>हम आपको अपनी वेबसाइट पर देखकर बहुत खुश हैं। बेहतर अनुभव के लिए हमारे कोर्सेस चेक करें।</p>
+            <h2>Welcome Back!</h2>
+            <p>आपको दीपावली की हार्दिक शुभकामनायें!</p>
+            <p>आपका दिन शुभ और मंगलमय हो!</p>
             <button id="closePopup">शुरू करें (Continue)</button>
         </div>
     </div>
