--- a/AI.html
+++ b/AI.html
@@ -130,6 +130,7 @@ header h1, header h3 {
       <a href="https://api.whatsapp.com/send/?phone=917204228312&text&type=phone_number&app_absent=0">CK 12 Whatsapp</a>
       <a href="calculator.html">Calculator</a>
       <a href="calc.html">Percentage Cal</a>
+      <a href="server.html">Error</a>
       <a href="invoice.html">Genrate Invoice</a>
       <a href="chatcode.html">Help</a>
       <a href="age.html">उम्र सुने</a>
@@ -229,6 +230,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
