--- a/AI.html
+++ b/AI.html
@@ -104,7 +104,7 @@ header h1, header h3 {
       <li><a href="Collage.html">College</a></li>
       <li><a href="Photo.html">Photo</a></li>
       <li><a href="AI.html">AI</a></li>
-      <li><a href="AI.html">AI</a></li>
+      <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
     </ul>
   </nav>
 </header>
@@ -230,6 +230,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
