--- a/AI.html
+++ b/AI.html
@@ -102,6 +102,7 @@ header h1, header h3 {
       <li><a href="courses.html">Courses</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="Collage.html">College</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/k7ssowfpp1anmsasvngv1/ShivComputer.apk?rlkey=qooqbgzew0vqvgnzdeleih1zk&st=ebvj8k82&dl=1">APP</a></li>li>
       <li><a href="Photo.html">Photo</a></li>
       <li><a href="AI.html">AI</a></li>
       <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
@@ -230,6 +231,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
