Fix HTML structure and improve formatting

--- a/AI.html
+++ b/AI.html
@@ -141,6 +141,7 @@ header h1, header h3 {
       <a href="qrgen.html">QR Genrate</a>
       <a href="UPID to QR .html">Acept Payment</a>
       <a href="https://www.scribd.com/document/935123135/DSC-Guide-FULL-for-Explorer-8090155304">DSC SETUP</a>
+      <a href="exam.html">Online Test</a>
     </div>
   </main>
 </body>
@@ -231,6 +232,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
