--- a/exam.html
+++ b/exam.html
@@ -31,7 +31,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
                     </svg>
                 </div>
-                <h1 class="text-2xl font-bold text-gray-800">ऑनलाइन परीक्षा प्रणाली</h1>
+                <h1 class="text-2xl font-bold text-gray-800">ऑनलाइन परीक्षा</h1>
             </div>
             <div id="userInfo" class="hidden items-center gap-4">
                 <span id="userName" class="text-gray-700 font-medium"></span>
@@ -218,7 +218,7 @@
 
     <script>
         var users = [
-            { mobile: '9876543210', dob: '2000-01-15', name: 'Rahul Kumar' },
+            { mobile: '9876543210', dob: '2000-01-15', name: 'Shiv Kumar' },
             { mobile: '8765432109', dob: '1999-05-20', name: 'Priya Singh' }
         ];
 
@@ -433,4 +433,5 @@
     </script>
 
 </body>
+
 </html>
