--- a/exam.html
+++ b/exam.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Exam System - Complete</title>
+    <link rel="icon" type="image/png" href="SHIV.png">
+    <title>Online Exam System</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
@@ -22,7 +23,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
                     </svg>
                 </div>
-                <h1 class="text-2xl font-bold text-gray-800">ऑनलाइन परीक्षा</h1>
+                <h1 class="text-2xl font-bold text-gray-800">ऑनलाइन परीक्षा  | Shiv Computer | For Help +91 8090155304</h1>
             </div>
             <div id="userInfo" style="display:none;" class="flex items-center gap-4">
                 <span id="userName" class="text-gray-700 font-medium"></span>
@@ -82,7 +83,7 @@
                     <div class="mt-6 p-4 bg-green-50 rounded-lg">
                         <p class="text-sm text-gray-700 font-medium mb-2">Demo Admin:</p>
                         <p class="text-xs text-gray-600">Username: admin</p>
-                        <p class="text-xs text-gray-600">Password: admin#123</p>
+                        <p class="text-xs text-gray-600">Password: Admin#123</p>
                     </div>
                 </div>
             </div>
@@ -784,3 +785,4 @@
 </body>
 </html>old hover:bg-gray-300 transition';
             document.getElementById('usersTabBtn').className = 'px-6 py-3 bg-gray-200 text-gray-700 rounded-lg font-semib
+
