--- a/exam.html
+++ b/exam.html
@@ -110,7 +110,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.492 9.576 5 8.25 5c-2.43 0-4.402 1.546-4.952 3.619l-2.094 8.65A1 1 0 00.104 18.5h23.792a1 1 0 00.95-1.231l-2.094-8.65C20.152 6.546 18.18 5 15.75 5c-1.326 0-2.582.492-3.75 1.253z"/>
                     </svg>
                 </div>
-                <h1 class="text-2xl font-bold text-gray-800 hidden sm:block">ऑनलाइन परीक्षा</h1>
+                <h1 class="text-2xl font-bold text-gray-800 hidden sm:block">ऑनलाइन परीक्षा | Shiv Computer | </h1>
             </div>
 
             <div id="userInfo" class="flex items-center gap-4 hidden">
