--- a/Collage.html
+++ b/Collage.html
@@ -115,6 +115,7 @@
       <a href="https://www.lkouniv.ac.in/">Lucknow University</a>
       <a href="https://scholarship.up.gov.in//">UP Scholarship</a>
       <a href="recipt.html">Genrate Recipt</a>
+      <a href="clist.html">Creat Correction List</a>
       <a href="dob.html">DOB Certificate</a>
       <a href="https://shvr.education.gov.in/">SHVR</a>
       <a href="https://inspireawards-dst.gov.in//">Inspire MANAK</a>
@@ -201,6 +202,7 @@
 
 </body>
 </html>
+
 
 
 
