Refactor AI.html for better structure and readability
Fixed HTML structure and improved formatting.

--- a/AI.html
+++ b/AI.html
@@ -142,6 +142,7 @@ header h1, header h3 {
       <a href="UPID to QR .html">Acept Payment</a>
       <a href="https://www.scribd.com/document/935123135/DSC-Guide-FULL-for-Explorer-8090155304">DSC SETUP</a>
       <a href="exam.html">Online Test</a>
+      <a href="scroll2.html">Make Text Scroll</a>
     </div>
   </main>
 </body>
@@ -232,6 +233,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
