--- a/scroll2.html
+++ b/scroll2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ScrollEffact</title>
+    <link rel="icon" type="image/png" href="SHIV.png">
     <style>
         /* === Google Fonts Import (10+ Fonts) === */
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;700&family=Poppins:wght@400;700&family=Noto+Sans+Devanagari:wght@400;700&family=Monoton&family=Orbitron:wght@400;700&family=Bebas+Neue&family=Cormorant+Garamond:wght@400;700&family=Rubik+Puddles&display=swap');
@@ -562,4 +563,5 @@ https://shivco.netlify.app/ . ➡️</textarea>
         });
     </script>
 </body>
+
 </html>
