--- a/AI.html
+++ b/AI.html
@@ -143,6 +143,7 @@ header h1, header h3 {
       <a href="https://www.scribd.com/document/935123135/DSC-Guide-FULL-for-Explorer-8090155304">DSC SETUP</a>
       <a href="exam.html">Online Test</a>
       <a href="scroll2.html">Make Text Scroll</a>
+      <a href="iedit.html">Picture Maneger</a>
     </div>
   </main>
 </body>
@@ -233,6 +234,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
