--- a/AI.html
+++ b/AI.html
@@ -144,6 +144,7 @@ header h1, header h3 {
       <a href="exam.html">Online Test</a>
       <a href="scroll2.html">Make Text Scroll</a>
       <a href="iedit.html">Picture Maneger</a>
+      <a href"final.html">Costom Bounce</a>
     </div>
   </main>
 </body>
@@ -234,6 +235,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
