--- a/final.html
+++ b/final.html
@@ -36,22 +36,22 @@
     gap: 8px;
     padding: 6px;
     border-radius: 10px;
-    backdrop-filter: blur(6px);
-    background: rgba(0,0,0,0.35);
-    border: 1px solid rgba(255,255,255,0.06);
+    backdrop-filter: blur(0px);
+    background: rgba(0,0,0,0.30);
+    border: 0px solid rgba(255,255,255,0.06);
   }
 
   .file-label {
     cursor: pointer;
     padding: 6px 10px;
     font-size: 14px;
-    color:#fff;
-    border-radius: 8px;
-    background: rgba(255,255,255,0.04);
-    border: 1px solid rgba(255,255,255,0.06);
+    color:blue;
+    border-radius: 12px;
+    background: rgba(255,255,255,0.08);
+    border: 1px solid rgba(255,255,255,0.30);
     display:flex;align-items:center;gap:6px;
   }
-  .file-label:hover { transform: translateY(-2px); transition:0.12s; }
+  .file-label:hover { transform: translateY(-8px); transition:0.20s; }
 
   .hidden-file { display:none; }
 
@@ -61,15 +61,15 @@
     top: 12px;
     right: 12px;
     z-index: 45;
-    color: #fff;
+    color: red;
     font-weight: 700;
     font-size: 18px;
-    text-shadow: 0 2px 8px rgba(0,0,0,0.6);
+    text-shadow: 0 4px 8px rgba(0,0,0,0.6);
     background: rgba(0,0,0,0.25);
     padding: 8px 12px;
-    border-radius: 10px;
-    backdrop-filter: blur(4px);
-    border:1px solid rgba(255,255,255,0.04);
+    border-radius: 20px;
+    backdrop-filter: blur(0px);
+    border:2px solid rgba(255,240,205,0.04);
   }
 
   #message {
@@ -84,6 +84,7 @@
     padding: 6px 12px;
     background: rgba(0,0,0,0.32);
     border-radius: 8px;
+    backdrop-filter: blur(0px);
     text-shadow: 0 3px 8px rgba(0,0,0,0.6);
   }
 
@@ -112,7 +113,7 @@
     background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
     border: 2px solid rgba(255,255,255,0.12);
     box-shadow: 0 8px 18px rgba(0,0,0,0.5), inset 0 -4px 12px rgba(255,255,255,0.02);
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(0px);
     transition: transform 0.12s ease, box-shadow 0.12s;
     user-select:none;
     -webkit-user-select:none;
@@ -128,7 +129,7 @@
     color:#fff; font-size:13px; z-index:40;
     background: rgba(0,0,0,0.25); padding:6px 8px; border-radius:8px;
     border:1px solid rgba(255,255,255,0.04);
-    backdrop-filter: blur(4px);
+    backdrop-filter: blur(0px);
   }
 
   /* Responsive tweaks */
@@ -136,6 +137,49 @@
     #mobileControls { bottom: 24px; gap: 18px; }
     .control-btn { width:64px; height:64px; font-size:24px; }
   }
+/* Footer styling */
+#footer {
+  position: fixed;
+  bottom: 8px;
+  right: 12px;
+  color: rgba(255,255,255,0.85);
+  font-size: 15px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  font-family: "Segoe UI", sans-serif;
+  text-shadow: 0 4px 8px rgba(0,0,0,0.8);
+  z-index: 60;
+  user-select: none;
+}
+/* Footer scrolling text */
+#footer {
+  position: fixed;
+  bottom: 8px;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  z-index: 60;
+  pointer-events: none;
+}
+
+#footer span {
+  display: inline-block;
+  color: rgba(255,255,255,0.85);
+  font-size: 16px;
+  font-weight: 600;
+  font-family: "Segoe UI", sans-serif;
+  text-shadow: 0 2px 6px rgba(0,0,0,0.6);
+  animation: scrollText 20s linear infinite; /* गति बदलें */
+}
+
+@keyframes scrollText {
+  0%   { transform: translateX(-20%); }
+  50%  { transform: translateX(90vw); } /* स्क्रीन की चौड़ाई का 40% */
+  100% { transform: translateX(-20%); }
+}
+
+
 </style>
 </head>
 <body>
@@ -276,8 +320,8 @@ collisionSoundInput.addEventListener('change', e => {
 const SCORE_KEY = "flyingGameScore";
 const BEST_KEY = "flyingGameBest";
 
-const PLAYER_SETTINGS = { x: 80, width: 72, height: 48, color: "#FFD700", jumpPower: -8, gravity: 0.38 };
-const OBSTACLE_SETTINGS = { width: 64, gap: 170, speed: 4.5 };
+const PLAYER_SETTINGS = { x: 80, width: 92, height: 48, color: "#FFD700", jumpPower: -8, gravity: 0.38 };
+const OBSTACLE_SETTINGS = { width: 90, gap: 230, speed: 4.0 };
 const COLLISION_OVERLAP_THRESHOLD = 0.40; // 40% overlap rule
 
 let player = { x: PLAYER_SETTINGS.x, y: 100, width: PLAYER_SETTINGS.width, height: PLAYER_SETTINGS.height, vel: 0 };
@@ -532,7 +576,7 @@ function gameLoop(now){
   const dt = now - lastTime || 16.67;
   lastTime = now;
   obstacleTimer += dt;
-  if (obstacleTimer > 1700) { createObstaclePair(); obstacleTimer = 0; }
+  if (obstacleTimer > 2000) { createObstaclePair(); obstacleTimer = 0; }
   updatePlayer(dt);
   updateObstacles(dt);
   // render
@@ -604,9 +648,135 @@ topBar.addEventListener('mouseup', ()=>{ clearTimeout(longPressTimer); });
   // If background music previously set, it will play when user starts game
   // Small UX hint: show best score in console (optional)
   if (best) console.log("Best score:", best);
+/* ============================
+   Auto-hide TopBar safely + Glow Fade Animation
+   ============================ */
+const topBar = document.getElementById('topBar');
+let hideTimer = null;
+
+// glow effect CSS
+const glowStyle = document.createElement("style");
+glowStyle.textContent = `
+@keyframes glowIn {
+  0% { box-shadow: 0 0 0px rgba(255,255,255,0.0); transform: translateY(-6px); }
+  50% { box-shadow: 0 0 14px rgba(255,255,255,0.4); transform: translateY(0); }
+  100% { box-shadow: 0 0 0px rgba(255,255,255,0.0); }
+}
+#topBar.glow {
+  animation: glowIn 1.2s ease;
+}
+`;
+document.head.appendChild(glowStyle);
+
+// केवल opacity से hide करें, display:none न करें
+function autoHideTopBar() {
+  hideTimer = setTimeout(() => {
+    topBar.style.transition = "opacity 0.8s ease";
+    topBar.style.opacity = "0";
+    topBar.style.pointerEvents = "none"; // क्लिक रोकें पर गेम चलता रहे
+  }, 10000);
+}
+
+// show function
+function showTopBar() {
+  clearTimeout(hideTimer);
+  topBar.style.pointerEvents = "auto";
+  topBar.style.transition = "opacity 0.4s ease";
+  topBar.style.opacity = "1";
+  topBar.classList.add('glow');
+  setTimeout(() => topBar.classList.remove('glow'), 1200);
+  autoHideTopBar();
+}
+
+// जब माउस या टच ऊपर जाए
+document.addEventListener('mousemove', e => {
+  if (e.clientY < 08) showTopBar();
+});
+document.addEventListener('touchstart', e => {
+  if (e.touches[0].clientY < 100) showTopBar();
+});
+
+// प्रारंभ में hide शुरू करें
+autoHideTopBar();
+
+/* ============================
+   Local Save & Restore User Settings
+   ============================ */
+const SETTINGS_KEY = "flyingGameUserSettings";
+
+// Load saved settings from localStorage
+function loadUserSettings() {
+  const saved = localStorage.getItem(SETTINGS_KEY);
+  if (!saved) return;
+  try {
+    const data = JSON.parse(saved);
+
+    if (data.playerImage) {
+      const img = new Image();
+      img.onload = () => (playerImage = img);
+      img.src = data.playerImage;
+    }
+    if (data.obstacleImage) {
+      const img = new Image();
+      img.onload = () => (obstacleImage = img);
+      img.src = data.obstacleImage;
+    }
+    if (data.backgroundImage) {
+      const img = new Image();
+      img.onload = () => (backgroundImage = img);
+      img.src = data.backgroundImage;
+    }
+    if (data.bgMusic) {
+      backgroundMusic.src = data.bgMusic;
+      backgroundMusic.load();
+    }
+    if (data.gameOverSound) {
+      gameOverSound.src = data.gameOverSound;
+      gameOverSound.load();
+    }
+    if (data.collisionSound) {
+      collisionSound.src = data.collisionSound;
+      collisionSound.load();
+    }
+    console.log("🎵 User settings restored from localStorage.");
+  } catch (err) {
+    console.warn("Failed to restore settings:", err);
+  }
+}
+
+// Save settings whenever a file changes
+function saveUserSettings() {
+  const settings = {
+    playerImage: playerImage ? playerImage.src : null,
+    obstacleImage: obstacleImage ? obstacleImage.src : null,
+    backgroundImage: backgroundImage ? backgroundImage.src : null,
+    bgMusic: backgroundMusic.src || null,
+    gameOverSound: gameOverSound.src || null,
+    collisionSound: collisionSound.src || null,
+  };
+  localStorage.setItem(SETTINGS_KEY, JSON.stringify(settings));
+  console.log("💾 Settings saved locally.");
+}
+
+// Attach file change listeners to auto-save
+[playerImageInput, obstacleImageInput, bgImageInput, bgMusicInput, gameOverSoundInput, collisionSoundInput].forEach(input => {
+  input.addEventListener("change", () => {
+    // wait 1s for file load then save
+    setTimeout(saveUserSettings, 1000);
+  });
+});
+
+// Restore when page loads
+loadUserSettings();
+
+
 })();
 
 </script>
+<!-- Footer text -->
+<div id="footer">© Shiv Computer</div>
+<!-- Footer text -->
+<div id="footer"><span>© Shiv Computer</span></div>
 
 </body>
 </html>
