--- a/AI.html
+++ b/AI.html
@@ -145,6 +145,7 @@ header h1, header h3 {
       <a href="scroll2.html">Make Text Scroll</a>
       <a href="iedit.html">Picture Maneger</a>
       <a href="final.html">Costom Bounce</a>
+      <a href="fimng2.html">Accounting</a>
     </div>
   </main>
 </body>
@@ -235,6 +236,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
