--- a/AI.html
+++ b/AI.html
@@ -105,6 +105,7 @@ header h1, header h3 {
       <li><a href="https://www.dropbox.com/scl/fi/k7ssowfpp1anmsasvngv1/ShivComputer.apk?rlkey=qooqbgzew0vqvgnzdeleih1zk&st=ebvj8k82&dl=1">APP</a></li>
       <li><a href="Photo.html">Photo</a></li>
       <li><a href="AI.html">AI</a></li>
+      <li><a href="account.html">Accounting</a></li>
       <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
     </ul>
   </nav>
@@ -236,6 +237,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
