--- a/account.html
+++ b/account.html
@@ -117,9 +117,12 @@ header h1, header h3 {
 
 
   <main>
-    <h2>AI TOOLS</h2>
+    <h2>Finance Manegment</h2>
     <div class="social-links">
       <a href="fimng2.html">Accounting</a>
+      <a href="fee.html">Fee Mnaegment</a>
+      <a href="fimng.html">Accounting</a>
+      <a href="fimng.html">Accounting</a>
     </div>
   </main>
 </body>
@@ -209,4 +212,5 @@ header h1, header h3 {
     }
   </style>
 </body>
+
 </html>
