--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
       color: yellow;
       text-decoration: none;
       font-weight: bold;
+      padding: 5px 10px;
     }
 
     nav ul li a:hover {
       color: #fa0217;
+      border-radius: 9px
     }
 
     /* MENU TOGGLE */
