Fix HTML formatting and structure

--- a/AI.html
+++ b/AI.html
@@ -146,7 +146,7 @@ header h1, header h3 {
       <a href="scroll2.html">Make Text Scroll</a>
       <a href="iedit.html">Picture Maneger</a>
       <a href="final.html">Costom Bounce</a>
-      <a href="fimng2.html">Accounting</a>
+      <a href="coun.html">Live Counting</a>
     </div>
   </main>
 </body>
@@ -237,6 +237,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
