--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Shiv Computer</title>
   <link rel="icon" type="image/png" href="SHIV.png">
+  <link rel="manifest" href="manifest.json">
   <style>
     body {
       font-family: Arial, sans-serif;
