Enhance styles and update button text in index.html
Increased font sizes for main heading and typewriter effect, adjusted text shadow and animation duration, and updated button text.

--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
 
     /* Main heading animation */
     main h2 {
-      font-size: 3rem;
+      font-size: 5rem;
       margin-bottom: 2rem;
       position: relative;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
-      animation: glow 2s infinite alternate;
+      text-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+      animation: glow 10s infinite alternate;
       color: #003d80;
     }
 
@@ -312,7 +312,7 @@
 
     /* Typewriter effect */
     .typewriter-container {
-      font-size: 1.8rem;
+      font-size: 2.3rem;
       margin-bottom: 2rem;
       min-height: 60px;
       color: #003d80;
@@ -321,7 +321,7 @@
 
     .cursor {
       display: inline-block;
-      width: 3px;
+      width: 5px;
       background-color: #003d80;
       margin-left: 4px;
       animation: blink 1s infinite;
@@ -442,7 +442,7 @@
     
     <h2>Welcome to Shiv Computer</h2>
     <div class="typewriter-container" id="typewriter"></div>
-    <button class="pulse-button">Explore Courses</button>
+    <button class="pulse-button"> For Explore Open Meenu </button>
   </main>
 
   <!-- FOOTER - Original maintain kiya -->
