--- a/index.html
+++ b/index.html
@@ -456,9 +456,9 @@
     
     <!-- Social Links - Original maintain kiya -->
     <div class="social-links">
-      <a href="#">Facebook</a> |
-      <a href="#">Instagram</a> |
-      <a href="#">Twitter</a>
+      <a href="https://www.facebook.com/profile.php?id=100093146240602">Facebook</a> |
+      <a href="https://www.instagram.com/ceshiv.kumar/">Instagram</a> |
+      <a href="https://x.com/ceshiv">🐦 Twitter (X)</a>
     </div>
   </footer>
 
