Update header styles and text for consistency

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     header {
       background: #0072ff;
       color: white;
-      padding: 10px 15px;
+      padding: 8px 10px;
       position: relative;
+      align-items: center;
       z-index: 2;
     }
 
@@ -37,7 +38,10 @@
 
     h1 {
       margin: 0;
-      font-size: 22px;
+      font-size: 25px;
+      color: yellow;
+      text-decoration: none;
+      font-weight: bold;
     }
 
     nav ul {
@@ -219,12 +223,12 @@
 
     .block {
       position: absolute;
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      filter: blur(40px);
-      opacity: 0.7;
-      animation: float 15s infinite linear;
+      width: 100px;
+      height: 100px;
+      border-radius: 90%;
+      filter: blur(20px);
+      opacity: 0.8;
+      animation: float 5s infinite linear;
     }
 
     .block:nth-child(1) {
@@ -412,7 +416,7 @@
   <header>
     <div class="header-top">
       <img src="logo.png" alt="Logo" class="logo">
-      <h1>Shiv Computer</h1>
+      <h1>SHIV COMPUTER</h1>
       <span class="menu-toggle" onclick="toggleMenu()">☰ Menu</span>
     </div>
 
@@ -440,7 +444,7 @@
       <div class="block"></div>
     </div>
     
-    <h2>Welcome to Shiv Computer</h2>
+    <h2>Welcome to SHIV COMPUTER</h2>
     <div class="typewriter-container" id="typewriter"></div>
     <button class="pulse-button"> For Explore Open Meenu </button>
   </main>
@@ -458,7 +462,7 @@
     <div class="social-links">
       <a href="https://www.facebook.com/profile.php?id=100093146240602">Facebook</a> |
       <a href="https://www.instagram.com/ceshiv.kumar/">Instagram</a> |
-      <a href="https://x.com/ceshiv">🐦 Twitter (X)</a>
+      <a href="https://x.com/ceshiv">🐦 Twitter</a>
     </div>
   </footer>
 
