--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     
     <h2>Welcome to SHIV COMPUTER</h2>
     <div class="typewriter-container" id="typewriter"></div>
-    <button class="pulse-button"> For Explore Open Meenu </button>
+    <button class="pulse-button">| For Explore Open Menu |</button>
   </main>
 
   <!-- FOOTER - Original maintain kiya -->
