--- a/AI.html
+++ b/AI.html
@@ -147,6 +147,9 @@ header h1, header h3 {
       <a href="iedit.html">Picture Maneger</a>
       <a href="final.html">Costom Bounce</a>
       <a href="coun.html">Live Counting</a>
+      <a href="carg.html">Super Car</a>
+      <a href="pdftojpeg.html">Pdf to JPEG</a>
+      <a href="imagetopdf.html">Image to PDF</a>
     </div>
   </main>
 </body>
@@ -237,6 +240,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
