--- a/AI.html
+++ b/AI.html
@@ -150,6 +150,8 @@ header h1, header h3 {
       <a href="carg.html">Super Car</a>
       <a href="pdftojpeg.html">Pdf to JPEG</a>
       <a href="imagetopdf.html">Image to PDF</a>
+      <a href="pdfredu.html">PDF Reducer</a>
+      <a href="gst.html">GST Calc</a>
     </div>
   </main>
 </body>
@@ -240,6 +242,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
