Fix HTML encoding issues in Collage.html

--- a/Collage.html
+++ b/Collage.html
@@ -121,7 +121,7 @@
       <a href="https://inspireawards-dst.gov.in//">Inspire MANAK</a>
       <a href="https://www.rte25.upsdc.gov.in/Index.aspx">RTE</a>
       <a href="https://pfms.nic.in/static/NewLayoutCommonContent.aspx?RequestPagename=static/KnowYourPayment_new.aspx">भुगतान स्थिति</a>
-      <a href="https://ecoclubs.education.gov.in/">Mission Life</a>a>
+      <a href="https://ecoclubs.education.gov.in/">Mission Life</a>
     </div>
   </main>
 
@@ -203,6 +203,7 @@
 
 </body>
 </html>
+
 
 
 
