--- a/AI.html
+++ b/AI.html
@@ -119,6 +119,11 @@ header h1, header h3 {
   <main>
     <h2>AI TOOLS</h2>
     <div class="social-links">
+      <a href="https://www.facebook.com/profile.php?id=100093146240602">📘 Facebook</a>
+      <a href="https://www.instagram.com/ceshiv.kumar/">📷 Instagram</a>
+      <a href="https://x.com/ceshiv">🐦 Twitter (X)</a>
+      <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">LinkdIn</a>
+      <a href="https://youtube.com/@ershivkumar?si=aAvVxJnHXo2Ur1b_">📹 YouTube</a>
       <a href="https://chatgpt.com/">Chat GPT</a>
       <a href="https://www.youtube.com/channel/UC6dXjXutQ216k9TXIEDKeOA">Home</a>
       <a href="https://www.perplexity.ai/">Perplexity</a>
@@ -242,6 +247,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
