--- a/AI.html
+++ b/AI.html
@@ -92,7 +92,7 @@ header h1, header h3 {
     <img src="logo.png" alt="Logo" class="logo">
     <div class="site-info" style="margin-left: 15px;">
       <h1 style="margin:0;">SHIV COMPUTER</h1>
-      <h3 style="margin:0;">KARANPUR SURATGANJ BARABANKI</h3>
+      <h3 style="margin:0;"></h3>
     </div>
   </div>
   <nav>
@@ -247,6 +247,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
