--- a/AI.html
+++ b/AI.html
@@ -24,7 +24,7 @@
   border-radius: 10px; /* Optional – थोड़ा rounded look */
 }
 header h1, header h3 {
-  color: #fff;
+  color: #ff8c47;
   text-align: left;
 }
 
@@ -247,6 +247,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
