--- a/courses.html
+++ b/courses.html
@@ -24,7 +24,7 @@
   border-radius: 10px; /* Optional – थोड़ा rounded look */
 }
 header h1, header h3 {
-  color: #fff;
+  color: #ff8c47;
   text-align: left;
 }
 
@@ -92,7 +92,7 @@ header h1, header h3 {
     <img src="logo.png" alt="Logo" class="logo">
     <div class="site-info" style="margin-left: 15px;">
       <h1 style="margin:0;">SHIV COMPUTER</h1>
-      <h3 style="margin:0;">KARANPUR SURATGANJ BARABANKI</h3>
+      <h3 style="margin:0;"></h3>
     </div>
   </div>
   <nav>
