--- a/AI.html
+++ b/AI.html
@@ -157,6 +157,7 @@ header h1, header h3 {
       <a href="imagetopdf.html">Image to PDF</a>
       <a href="pdfredu.html">PDF Reducer</a>
       <a href="gst.html">GST Calc</a>
+      <a href="candy2.html">Candy Drop</a>
     </div>
   </main>
 </body>
@@ -247,6 +248,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
