--- a/candy2.html
+++ b/candy2.html
@@ -326,7 +326,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Customizable Candy Drop Game</h1>
+        <h1>Candy Drop Game</h1>
         
         <div class="game-info">
             <div class="score-container">Score: <span id="score">0</span></div>
@@ -1281,4 +1281,5 @@
 
     </script>
 </body>
+
 </html>
