--- a/AI.html
+++ b/AI.html
@@ -158,6 +158,7 @@ header h1, header h3 {
       <a href="pdfredu.html">PDF Reducer</a>
       <a href="gst.html">GST Calc</a>
       <a href="candy2.html">Candy Drop</a>
+      <a href="fpajal.html">Fruit Puzale</a>
     </div>
   </main>
 </body>
@@ -248,6 +249,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
