--- a/AI.html
+++ b/AI.html
@@ -106,6 +106,7 @@ header h1, header h3 {
       <li><a href="Photo.html">Photo</a></li>
       <li><a href="AI.html">AI</a></li>
       <li><a href="account.html">Accounting</a></li>
+      <li><a href="htedit.html">Accounting</a></li>
       <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
     </ul>
   </nav>
@@ -249,6 +250,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
