--- a/candy2.html
+++ b/candy2.html
@@ -378,10 +378,10 @@
                 
                 <h3>Candy Shape</h3>
                 <div class="shape-options" id="candyShapes">
-                    <div class="shape-option selected" data-shape="circle">●</div>
-                    <div class="shape-option" data-shape="square">■</div>
-                    <div class="shape-option" data-shape="diamond">◆</div>
-                    <div class="shape-option" data-shape="star">★</div>
+                    <div class="shape-option selected" data-shape="circle">🍪</div>
+                    <div class="shape-option" data-shape="square">❤️</div>
+                    <div class="shape-option" data-shape="diamond">💋</div>
+                    <div class="shape-option" data-shape="star">⭐</div>
                 </div>
                 
                 <button id="applyCandy">Apply Candy Changes</button>
