--- a/candy2.html
+++ b/candy2.html
@@ -380,7 +380,7 @@
                 <div class="shape-options" id="candyShapes">
                     <div class="shape-option selected" data-shape="circle">🍪</div>
                     <div class="shape-option" data-shape="square">❤️</div>
-                    <div class="shape-option" data-shape="diamond">💋</div>
+                    <div class="shape-option" data-shape="diamond">🍭</div>
                     <div class="shape-option" data-shape="star">⭐</div>
                 </div>
                 
