--- a/AI.html
+++ b/AI.html
@@ -160,6 +160,7 @@ header h1, header h3 {
       <a href="gst.html">GST Calc</a>
       <a href="candy2.html">Candy Drop</a>
       <a href="fpajal.html">Fruit Puzale</a>
+      <a href="voiceinput.html">Voice Input Tool</a>
     </div>
   </main>
 </body>
@@ -250,6 +251,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
