--- a/AI.html
+++ b/AI.html
@@ -102,7 +102,7 @@ header h1, header h3 {
       <li><a href="courses.html">Courses</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="Collage.html">College</a></li>
-      <li><a href="https://www.dropbox.com/scl/fi/svccn4jy14oq4hwxg1v1a/Shiv.apk?rlkey=vsti9l3zpoibsm0ys4z53seie&st=q3n4zc18&dl=1">APP</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/ig6i722syr952t8ixpfwd/Shiv_Computer.apk?rlkey=ddhb0dy1kxenl2vdztb28i7j6&st=cc4jg1e7&dl=1">APP</a></li>
       <li><a href="Photo.html">Photo</a></li>
       <li><a href="AI.html">AI</a></li>
       <li><a href="account.html">Accounting</a></li>
@@ -251,6 +251,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
