Fix HTML structure and clean up styles

--- a/account.html
+++ b/account.html
@@ -123,6 +123,7 @@ header h1, header h3 {
       <a href="fee.html">Fee Mnaegment</a>
       <a href="fimng.html">Accounting</a>
       <a href="fimng.html">Accounting</a>
+      <a href="accounting.html">Ledger</a>
     </div>
   </main>
 </body>
@@ -214,3 +215,4 @@ header h1, header h3 {
 </body>
 
 </html>
+
