Fix HTML structure and improve styling

--- a/AI.html
+++ b/AI.html
@@ -161,6 +161,7 @@ header h1, header h3 {
       <a href="candy2.html">Candy Drop</a>
       <a href="fpajal.html">Fruit Puzale</a>
       <a href="voiceinput.html">Voice Input Tool</a>
+      <a href="gltime.html">Get Local Time</a>
     </div>
   </main>
 </body>
@@ -251,6 +252,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
