--- a/AI.html
+++ b/AI.html
@@ -106,7 +106,8 @@ header h1, header h3 {
       <li><a href="Photo.html">Photo</a></li>
       <li><a href="AI.html">AI</a></li>
       <li><a href="account.html">Accounting</a></li>
-      <li><a href="htedit.html">Code Edit Live</a></li>
+      <li><a href="htedit.html">Code Edit 1</a></li>
+      <li><a href="codeedit.html">Code Edit 2</a></li>
       <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
     </ul>
   </nav>
@@ -252,6 +253,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
