--- a/codeedit.html
+++ b/codeedit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" type="image/png" href="SHIV.png">
     <title> वेब कोडर </title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/codemirror.min.css">
@@ -60,4 +61,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
